--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,9 @@
 {% extends "base_first.html" %}
 {% block content %}
     <center><h1>Добро пожаловать на сайт Tutorcoon!</h1></center>
-    <p class="a">Это онлайн-место, где люди могут узнать все о книгах, а также оставить отзыв о любимом произведении, поставить ему оценку и рекомендовать его другим пользователям.</p>
-    <p class="b">Здесь каждый может найти книгу по своим предпочтениям!</p>
-    <p class="c">Также на нашем сайте вы можете поделиться своим творчеством, найти первых читателей и стать полноценным автором.</p>
-    <p class="d">Присоединяйтесь к нашей большой семье книголюбов и путешествуйте в удивительную страну литературы вместе с нашими талисманами: ёжиком Торопыгой и енотом Кофием!</p>
+    <p class="a">Это электронный журнал для репетиторов и их учеников с крутым интерфейсом.</p>
+    <p class="b">Tutorcoon предназначен для того, чтобы помочь репетиторам в планировании их расписания, подсчёте зарплаты, ведении уроков и выкладывании домашнего задания.
+    Ученики на нашем сайте могут посмотреть задания от преподавателя, а также увидеть свою успеваемость. Их родителей мы также с нетерпением ждём.</p>
+    <p class="c">Наше приложение абсолютно бесплатно! Так что быстрее регистрируйся и вступай в нашу большую и умную семью.</p>
+    <p class="d">Енот-репетитор Кофий ждёт вас!</p>
 {% endblock %}
