--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,13 @@
     <link href="/static/img/html/emblem.jpg" type="image/jpg" rel="shortcut icon">
   </head>
   <body>
+  <main role="main" class="container">
+    {% block content %}{% endblock %}
+  </main>
   </body>
 <footer class="bg-light text-center text-lg-start" style="margin-top: 30px">
   <div class="text-center p-3" style="background-color: #DEB887; color: Snow">
-    Hedcodbook
+    Tutorcoon
   </div>
 </footer>
 </html>
