--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,41 @@
     <link href="/static/img/html/emblem.jpg" type="image/jpg" rel="shortcut icon">
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a href="/" class="navbar-brand">
+        <img src="/static/img/html/emblem.jpg" width="50" height="40" alt="logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="#navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="navbar-brand" href="/">Home</a>
+          </li>
+          {% if current_user.status == "student" %}
+          <li class="nav-item active">
+            <a class="navbar-brand" href="/">Add a tutor</a>
+          </li>
+          <li class="nav-item active">
+            <a class="navbar-brand" href="/">Add a parent</a>
+          </li>
+          {% endif %}
+          {% if current_user.status == "tutor" %}
+          <li class="nav-item active">
+            <a class="navbar-brand" href="/">Add a tutor</a>
+          </li>
+          {% endif %}
+          {% if current_user.status == "parent" %}
+          <li class="nav-item active">
+            <a class="navbar-brand" href="/">Add a child</a>
+          </li>
+          {% endif %}
+        </ul>
+      </div>
+      <a class="navbar-brand" href="/user_page">{{ current_user.name }}</a>
+    </nav>
   <main role="main" class="container">
     {% block content %}{% endblock %}
   </main>
