--- a/static/css/my_students.css
+++ b/static/css/my_students.css
@@ -1,6 +1,6 @@
 html { height: 100%; }
 body { min-height: 100%; }
-.img_author {
+.img_student {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -14,3 +14,21 @@ body { min-height: 100%; }
     margin-top: 60px;
 }
 p {font-size: 20px}
+
+button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: black;
+  background-color: transparent;
+  cursor: pointer;
+  background-color: #FFE4B5;
+  border-radius: 25px;
+  height: 100px;
+  width: 100px;
+
+}
+button:focus {
+  outline: 0;
+  color: black;
+}
