--- a/templates/base_first.html
+++ b/templates/base_first.html
@@ -13,11 +13,11 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="/">Tutorcoon</a>
         <p>
-            <a class="btn btn-info" href="/register">Зарегистрироваться</a>
-            <a class="btn btn-warning" href="/login">Войти</a>
+        <a class="btn btn-info" href="/register">Зарегистрироваться</a>
+        <a class="btn btn-warning" href="/login">Войти</a>
         </p>
     </nav>
 </header>
@@ -25,8 +25,8 @@
     {% block content %}{% endblock %}
 </main>
 </body>
-<footer class="bg-light text-center text-lg-start" style="margin-top: 20px">
-  <div class="text-center p-3" style="background-color: #DEB887; color: Snow">
+<footer class="bg-dark text-center text-lg-start" style="margin-top: 30px">
+  <div class="text-center p-3" style="color: Snow; font-family: Roboto; font-size: 20px">
     Tutorcoon
   </div>
 </footer>
