--- a/templates/my_students.html
+++ b/templates/my_students.html
@@ -2,12 +2,16 @@
 {% block title%}my_students{% endblock %}
 {% block content %}
 <link rel="stylesheet" type="text/css" href="/static/css/my_students.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 {% for i in sp_students %}
 <div>
    <a href="/avatars/{{ i.avatar }}">
-       <img class="img_author" src="{{ authors[i].picture }}">
+       <img class="img_student" src="/static/img/avatars/{{ i.avatar }}">
    </a>
    <p><b><i>{{ i.name }} {{ i.surname}}</i></b></p>
 </div>
 {% endfor %}
+<a href="/add_student/{{current_user.id}}"><button><i class="fas fa-plus"></i></button></a>
 {% endblock %}
