--- a/static/css/my.css
+++ b/static/css/my.css
@@ -1,6 +1,6 @@
 html { height: 100%; }
 body { min-height: 100%; }
-.img_student {
+.img{
     width: 100%;
     height: 100%;
     object-fit: cover;
