--- a/templates/my.html
+++ b/templates/my.html
@@ -13,5 +13,5 @@
    <p><b><i>{{ i.name }} {{ i.surname}}</i></b></p>
 </div>
 {% endfor %}
-<a href="/{{ add_smth }}/{{current_user.id}}"><button><i class="fas fa-plus"></i></button></a>
+<a href="/{{ add_smth }}"><button><i class="fas fa-plus"></i></button></a>
 {% endblock %}
