--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,4 +1,16 @@
-li, span {
+body{
+background-image: url(/static/img/html/main_page_fon.png);
+background-repeat: no-repeat;
+background-position: center center;
+background-attachment: fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
+body, html{
+height: 100%}
+* {
   box-sizing: border-box;
   font-family: 'Roboto';
   list-style: none;
@@ -6,6 +18,7 @@ li, span {
   outline: none;
   padding: 0;
 }
+
 a{color: white;
 text-decoration: none;}
 
@@ -13,13 +26,11 @@ a:hover {color: white;
 text-decoration: none;
 }
 
-body, html {
-  height: 100%;
-}
 
 .container {
+display: flex;
   align-items: center;
-  display: flex;
+
   height: 100%;
   justify-content: center;
   margin: 0 auto;
@@ -40,6 +51,19 @@ body, html {
 
 .front {
   transform: rotateY(0deg);
+}
+
+.current-date {
+  border-bottom: 1px solid rgba(73, 114, 133, .6);
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 40px;
+}
+
+.current-date h1 {
+  color: #dfebed;
+  font-size: 1.4em;
+  font-weight: 300;
 }
 
 .week-days {
@@ -70,18 +94,6 @@ body, html {
   justify-content: space-between;
   margin-bottom: 20px;
   width: 100%;
-}
-.current-date {
-  border-bottom: 1px solid rgba(73, 114, 133, .6);
-  display: flex;
-  justify-content: space-between;
-  padding: 30px 40px;
-}
-
-.current-date h1 {
-  color: #dfebed;
-  font-size: 1.4em;
-  font-weight: 300;
 }
 
 .last-month {
@@ -186,24 +198,10 @@ body, html {
 
 .actions button:first-of-type {
   border-right: 1px solid rgba(73, 114, 133, .6);
+
+footer {
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
-.actions button:hover {
-  background: #497285;
-  cursor: pointer;
-}
-
-.actions button:active {
-  background: #5889a0;
-  outline: none;
-}
-
-/* Flip animation */
-
-.flip {
-  transform: rotateY(180deg);
-}
-
-.front, .back {
-  backface-visibility: hidden;
-}
