--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,20 +8,15 @@ background-attachment: fixed;
 -o-background-size: cover;
 background-size: cover;
 }
-body {
-  min-height: 100vh;
-  position: relative;
-  margin: 0;
-  padding-bottom: 100px; //height of the footer
-  box-sizing: border-box;
-}
+body, html{
+height: 100%}
 
 footer {
   position: absolute;
+  left: 0;
   bottom: 0;
   width: 100%;
 }
-
 a {
   box-sizing: border-box;
   font-family: 'Roboto';
