--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="/static/css/main.css">
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css">
     <title>{% block title %}{% endblock %}</title>
     <link href="/static/img/html/emblem.jpg" type="image/jpg" rel="shortcut icon">
   </head>
@@ -38,6 +38,7 @@
           <li class="nav-item active">
             <a class="navbar-brand" href="/add_course">Add course</a>
           </li>
+          {% endif %}
         </ul>
       </div>
       <a class="navbar-brand" href="/user_page">{{ current_user.name }}</a>
