--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,13 +10,10 @@ background-size: cover;
 }
 body, html{
 height: 100%}
-
-footer {
-  position: absolute;
-  left: 0;
+footer{
+position: absolute;
   bottom: 0;
-  width: 100%;
-}
+  width: 100%;}
 a {
   box-sizing: border-box;
   font-family: 'Roboto';
