lesson can add students

--- a/static/css/first.css
+++ b/static/css/first.css
@@ -33,7 +33,7 @@ h1 {text-align: center;
 	src: url(/static/fonts/ambidexter_regular.otf)}
 @font-face {
 	font-family: 'FontName2';
-	src: url(/static/fonts/ofont.ru_Honday.ttf)}
+	src: url(/static/fonts/ofont.ru_Calypso.ttf)}
 body {
   min-height: 100vh;
   position: relative;
