--- a/static/css/my.css
+++ b/static/css/my.css
@@ -32,3 +32,9 @@ button:focus {
   outline: 0;
   color: black;
 }
+.link{color: black;
+text-decoration: none;}
+
+.link:hover {color: black;
+text-decoration: none;
+}
