--- a/templates/day.html
+++ b/templates/day.html
@@ -15,9 +15,9 @@
 	    </thead>
         {% for i in range(0, len_sp - 1, 3) %}
         <tr>
-            <th><a href="{{ sp_all[i][1] }}" style="color: #F0E68C">{{ sp_all[i][0] }}</a></th>
-            <th><a href="{{ sp_all[i + 1][1] }}" style="color: #F0E68C">{{ sp_all[i + 1][0] }}</a></th>
-            <th><a href="{{ sp_all[i + 2][1] }}" style="color: #F0E68C">{{ sp_all[i + 2][0] }}</a></th>
+            <th><a href="{{ sp_all[i][1] }}" style="color: #F0E68C">{{ sp_all[i] }}</a></th>
+            <th><a href="{{ sp_all[i + 1][1] }}" style="color: #F0E68C">{{ sp_all[i + 1] }}</a></th>
+            <th><a href="{{ sp_all[i + 2][1] }}" style="color: #F0E68C">{{ sp_all[i + 2] }}</a></th>
         </tr>
         {% endfor %}
     </table>
