--- a/templates/my.html
+++ b/templates/my.html
@@ -6,12 +6,21 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 {% for i in sp %}
+{% if (i.status == 'tutor' and current_user.status == 'student') or (i.status == 'student' and current_user.status == 'tutor') %}
 <div>
-   <a href="/avatars/{{ i.avatar }}">
+    <a class='link' href="/show_page_of_user/{{ i.id }}">
        <img class="img" src="/static/img/avatars/{{ i.avatar }}">
-   </a>
+   <p><b><i>{{ i.name }} {{ i.surname}}</i></b></p>
+    </a>
+    </div>
+    {% else %}
+    <div>
+       <img class="img" src="/static/img/avatars/{{ i.avatar }}">
    <p><b><i>{{ i.name }} {{ i.surname}}</i></b></p>
 </div>
+
+{% endif %}
 {% endfor %}
+
 <a href="/{{ add_smth }}"><button><i class="fas fa-plus"></i></button></a>
 {% endblock %}
