lesson can add studentseee

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,6 +7,7 @@ background-attachment: fixed;
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: cover;
+position: relative;
 }
 body, html{
 height: 100%}
