--- a/templates/page_of_tutor.html
+++ b/templates/page_of_tutor.html
@@ -32,7 +32,7 @@
          </div>
      </form>
      <form method="post" action="{{ url_for('send_reviews_for_tutor', tutor_id = tutor.id_user)}}">
-         <label class="comment" for="msg">Комментарий:</label>
+         <label class="comment" for="msg">Отзыв:</label>
          <textarea id="msg" name="user_message"></textarea>
          <div>
              <button type="submit" style="padding-bottom: 5px">Оставить отзыв</button>
