--- a/templates/watch_homework_for_student.html
+++ b/templates/watch_homework_for_student.html
@@ -2,8 +2,10 @@
 {% block content %}
 <link rel="stylesheet" type="text/css" href="/static/css/watch_homework_for_student.css">
 <h1>Домашнее задание на {{ date }}</h1>
+<div class="col-md6 border rounded">
 <p>{{ text }}</p>
-<form method="POST" action="{{ url_for('change_status_of_homework', homework_id = homework_id)}}">
+</div>
+<form method="POST" action="{{ url_for('change_status_of_homework', homework_id = homework_id, date=date, lesson_id=lesson_id)}}">
 {% if done %}
     <input type="checkbox" name="status" checked />
     <label>Домашнее задание выполнено</label>
@@ -11,5 +13,11 @@
     <input type="checkbox" name="status"/>
     <label>Домашнее задание не выполнено</label>
 {% endif %}
+    <div>
+        <button type="submit">Изменить статус домашнего задания</button>
+    </div>
 </form>
+{% if done %}
+<p>Баллы за домашнее задание: {{ scores }}</p>
+{% endif %}
 {% endblock %}
