--- a/static/css/day.css
+++ b/static/css/day.css
@@ -2,7 +2,7 @@ table {
   font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
   font-family: 'FontName';
   font-size: 30px;
-  background: #3CB371;
+  background: #FFDEAD;
   max-width: 70%;
   width: 70%;
   border-collapse: collapse;
