--- a/static/css/watch_homework_for_tutor.css
+++ b/static/css/watch_homework_for_tutor.css
@@ -1,4 +1,4 @@
-h1 {text-align: center;
+.title {text-align: center;
     font-family: 'FontName bold';
 	 font-size: 60px;
 	 color: #7FFFD4
@@ -12,4 +12,34 @@ font-family: 'FontName bold';
 font-size: 40px;
 margin: 0;
 padding: 0 0 10px 0;
+}
+table {
+  font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+  font-family: 'FontName';
+  font-size: 30px;
+  background: #FFDEAD;
+  max-width: 70%;
+  width: 70%;
+  border-collapse: collapse;
+  text-align: center;
+  margin-top: 10px;
+}
+th {
+  font-weight: normal;
+  color: #037;
+  border-right: 2px solid #6678b1;
+  border-left: 2px solid #6678b1;
+  border-bottom: 2px solid #6678b1;
+  border-top: 2px solid #6678b1;
+  padding: 10px 8px;
+}
+td {
+  color: #669;
+  padding: 9px 8px;
+  border-right: 2px solid #6678b1;
+  border-left: 2x solid #6678b1;
+  transition: .3s linear;
+}
+tr:hover td {
+  color: #6699ff;
 }
