--- a/templates/base.html
+++ b/templates/base.html
@@ -26,13 +26,13 @@
             <a class="navbar-brand" href="/">Home</a>
           </li>
           <li class="nav-item active">
-            <a class="navbar-brand" href="/">Help material</a>
+            <a class="navbar-brand" href="/help_materials">Help material</a>
           </li>
           <li class="nav-item active">
-            <a class="navbar-brand" href="/">Tests</a>
+            <a class="navbar-brand" href="/tests">Tests</a>
           </li>
           <li class="nav-item active">
-            <a class="navbar-brand" href="/">Video lessons</a>
+            <a class="navbar-brand" href="/video_lessons">Video lessons</a>
           </li>
           {% if current_user.status == 'tutor' %}
           <li class="nav-item active">
