--- a/templates/course_for_tutor.html
+++ b/templates/course_for_tutor.html
@@ -20,4 +20,14 @@
     {% endfor %}
     <button type="submit">Submit</button>
 </form>
+<h2>Статистика учеников</h2>
+<div class="simple-bar-chart">
+    {% for i in sp_scores %}
+    <div class="item" style="--clr: #F4A460; --val: {{ i[0]}}">
+        <div class="label">{{ i[2] }}</div>
+        <div class="value">{{ i[1] }}</div>
+    </div>
+    {% endfor %}
+</div>
+
 {% endblock %}
