--- a/templates/watch_homework_for_tutor.html
+++ b/templates/watch_homework_for_tutor.html
@@ -1,8 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
 <link rel="stylesheet" type="text/css" href="/static/css/watch_homework_for_tutor.css">
-<h1>Домашнее задание на {{ date }}</h1>
+<h1 class="title">Домашнее задание на {{ date }}</h1>
 <div class="col-md6 border rounded">
 <p>{{ text }}</p>
 </div>
+<table class="container">
+    <thead>
+    <tr>
+        <th><h1>Ученик</h1></th>
+        <th><h1>Статус домашнего задания</h1></th>
+        <th><h1>Баллы</h1></th>
+    </tr>
+    </thead>
+        {% for i in range(len_sp) %}
+        <tr>
+            <th><a style="color: #037">{{ sp[i][0] }}</a></th>
+            <th><a style="color: #037">{{ sp[i][1] }}</a></th>
+            <th>
+                <form method="POST" action="{{ url_for('change_scores_of_homework', homework_id = homework_id, lesson_id=lesson_id, date=date, user_id=sp[i][3])}}">
+                <input type="number" name="scores" min="0" value="{{ sp[i][2] }}"/>
+                    <div>
+                        <button type="submit" style="margin-top: 5px">Сохранить</button>
+                    </div>
+                </form>
+            </th>
+        </tr>
+        {% endfor %}
+    </table>
 {% endblock %}
