--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 {% block content %}
     <center><h1>Добро пожаловать на сайт Tutorcoon!</h1></center>
     <p class="a">Это электронный журнал для репетиторов и их учеников с крутым интерфейсом.</p>
-    <p class="b">Tutorcoon предназначен для того, чтобы помочь репетиторам в планировании их расписания, подсчёте зарплаты, ведении уроков и выкладывании домашнего задания.
-    Ученики на нашем сайте могут посмотреть задания от преподавателя, а также увидеть свою успеваемость.</p>
+    <p class="b">Tutorcoon предназначен для того, чтобы помочь репетиторам в планировании их расписания, ведении уроков, выставлении оценок и выкладывании домашнего задания.
+    Ученики на нашем сайте могут посмотреть задания от преподавателя и увидеть свою успеваемость.</p>
     <p class="c">Наше приложение абсолютно бесплатно! Так что быстрее регистрируйся и вступай в нашу большую и умную семью.</p>
     <p class="d">Енот-репетитор Кофий ждёт вас!</p>
 {% endblock %}
