--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,12 +9,19 @@ background-attachment: fixed;
 background-size: cover;
 position: relative;
 }
-body, html{
-height: 100%}
-footer{
-position: absolute;
+
+body {
+  min-height: 100vh;
+  position: relative;
+  margin: 0;
+  padding-bottom: 100px; //height of the footer
+  box-sizing: border-box;
+}
+footer {
+  position: absolute;
   bottom: 0;
-  width: 100%;}
+  width: 100%;
+}
 a {
   box-sizing: border-box;
   font-family: 'Roboto';
