--- a/static/css/my_courses.css
+++ b/static/css/my_courses.css
@@ -1,7 +1,7 @@
 h1 {text-align: center;
     font-family: 'FontName bold';
 	 font-size: 60px;
-	 color: #7FFFD4
+	 color: #1a1a1a
      }
 @font-face {
 	font-family: 'FontName bold';
