--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
-<!doctype html>
-<html lang="en">
-  <head>
+{% extends 'base.html' %}
+{% block content %}
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet"
@@ -12,37 +12,6 @@
     <link href="/static/img/html/emblem.jpg" type="image/jpg" rel="shortcut icon">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a href="/" class="navbar-brand">
-        <img src="/static/img/html/emblem.jpg" width="50" height="40" alt="logo">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-              aria-controls="#navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="navbar-brand" href="/">Home</a>
-          </li>
-          <li class="nav-item active">
-            <a class="navbar-brand" href="/help_materials">Help material</a>
-          </li>
-          <li class="nav-item active">
-            <a class="navbar-brand" href="/tests">Tests</a>
-          </li>
-          <li class="nav-item active">
-            <a class="navbar-brand" href="/video_lessons">Video lessons</a>
-          </li>
-          {% if current_user.status == 'tutor' %}
-          <li class="nav-item active">
-            <a class="navbar-brand" href="/add_course">Add course</a>
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-      <a class="navbar-brand" href="/user_page">{{ current_user.name }}</a>
-    </nav>
   <main role="main" class="container">
       <div class="container">
   <div class="calendar" style="height: {{height}}px">
@@ -103,3 +72,4 @@
   </div>
 </footer>
 </html>
+{% endblock %}
